--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="">
     <div class=" h-screen  flex flex-col justify-center items-center p-50">
-    <form onsubmit="progress_updater()" class="w-full max-w-lg"  action="/insta-scrap" method="post">
+    <form onsubmit="progress_updater()" class="w-full max-w-lg"  action="/ig/insta-scrap" method="post">
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="name">
@@ -77,8 +77,8 @@
   </div>
 
   <script>
-    var source = new EventSource("http://localhost:8000/stream-logs");
-    // var source = new EventSource("https://52.30.84.14:8000/stream-logs");
+    // var source = new EventSource("http://localhost:8000/ig/stream-logs");
+    var source = new EventSource("https://52.30.84.14:8000/ig/stream-logs");
     source.onmessage = function(event) {
         console.log(event.data);
         document.getElementById("progress").innerHTML = event.data + "%";
